--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
+    "alt": "^0.16.1",
     "body-parser": "^1.12.3",
     "debug": "^2.1.3",
     "express": "^4.12.3",
