--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "morgan": "^1.5.2",
     "react": "^0.13.2",
     "react-router": "^0.13.2",
-    "reflux": "^0.2.7"
+    "reflux": "^0.2.7",
+    "superagent": "^1.2.0"
   }
 }
