--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "alt": "^0.16.1",
     "body-parser": "^1.12.3",
+    "classnames": "^1.2.2",
     "debug": "^2.1.3",
     "express": "^4.12.3",
     "gulp-util": "^3.0.4",
